--- a/contact.html
+++ b/contact.html
@@ -191,11 +191,10 @@
                     <div class="col-12">
                         <div class="breadcrumb_content text-center wow fadeInUp" data-wow-delay="0.1s"
                             data-wow-duration="1.1s">
-                            <H2>Contact <span>Us</span></H2>
+                            <h2>Contact <span>Us</span></h2>
                             <ul>
                                 <li><a href="index.html">home / </a></li>
                                 <li><span>Contact</span></li>
-                                </li>
                             </ul>
                         </div>
                     </div>
